Fix modal display issue and update profile visibility check

--- a/clients/Funnelenvy/Dice/feDice130/src/experiment.scss
+++ b/clients/Funnelenvy/Dice/feDice130/src/experiment.scss
@@ -4,22 +4,23 @@
 .#{$id} {
   &__modalShow {
     .#{$id}__modalContainer {
+      display: flex !important;
       animation: scale-in-center 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
     }
   }
   &__modalContainer {
+    display: none;
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100vh;
-    display: flex;
     align-items: center;
     justify-content: center;
     text-align: center;
     background-color: #fff;
     z-index: 9999;
-    animation: scale-out-center 0.5s cubic-bezier(0.55, 0.085, 0.68, 0.53) both;
+    // animation: scale-out-center 0.5s cubic-bezier(0.55, 0.085, 0.68, 0.53) both;
 
     .#{$id}__modalWrapper {
       .#{$id}__header {
@@ -130,8 +131,8 @@
 
       .#{$id}__crossIcon {
         position: absolute;
-        top: 10px;
-        right: 10px;
+        top: 50px;
+        right: 50px;
         color: #195589;
         cursor: pointer;
       }
@@ -151,16 +152,16 @@
     }
   }
   
-  @keyframes scale-out-center {
-    0% {
-      -webkit-transform: scale(1);
-      transform: scale(1);
-      opacity: 1;
-    }
-    100% {
-      -webkit-transform: scale(0);
-      transform: scale(0);
-      opacity: 1;
-    }
-  }
+  // @keyframes scale-out-center {
+  //   0% {
+  //     -webkit-transform: scale(1);
+  //     transform: scale(1);
+  //     opacity: 1;
+  //   }
+  //   100% {
+  //     -webkit-transform: scale(0);
+  //     transform: scale(0);
+  //     opacity: 1;
+  //   }
+  // }
 }
